# RedditRanger

./: .replit  PROJECT_PLAN.md  compile_translations.py  config.py  generate_fremen_snoo.py  main.py  pyproject.toml  replit.nix  reset_ports.sh  run_tests.py  streamlit_app.py  test_api.py
.streamlit/: config.toml
attached_assets/: Pasted-2025-01-27T04-19-43Z-info-Deployment-6935d131-7d79-49d2-bc54-bc62fe9d3880-2025-01-27T04-19-43Z-inf-1737951846155.txt  Pasted-2025-02-15-05-44-09-512-utils-database-INFO-Database-engine-initialized-successfully-2025-02--1739598411183.txt  Pasted-2025-02-15-19-07-16-620-utils-performance-monitor-INFO-Performance-metric-nltk-resource-l-1739646526370.txt  Pasted-2025-02-15-19-12-55-988-utils-database-INFO-Database-engine-initialized-successfully-2025-02--1739651239122.txt  Pasted-2025-02-15-22-55-51-286-utils-database-ERROR-Database-error-in-get-or-create-psycopg2-Operat-1739660245901.txt  Pasted-2025-02-15-22-55-51-286-utils-database-ERROR-Database-error-in-get-or-create-psycopg2-Operat-1739660256322.txt  Pasted-Account-Age-Newer-accounts-often-have-higher-suspicion-particularly-if-they-have-high-volume-or-sc-1737788708859.txt  scoring.py
config/: __init__.py  theme.py
extension/: content.js  manifest.json  styles.css
nltk_data/: resource_cache.json
static/: animate.js  sand_effect.js  shaders.js  style.css  theme.css
tests/: conftest.py  test_api.py  test_lazy_loading.py  test_ml_analyzer.py  test_text_analyzer.py
utils/: auth.py  config_validator.py  database.py  i18n.py  ml_analyzer.py  performance_monitor.py  scoring.py  (+4 more)
(+21 files in other folders)
