[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "plotly>=5.24.1",
    "praw>=7.8.1",
    "prawcore>=2.4.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
]
